--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    
+    <p>
+        Informe seu Nome:
+        <input type="text" name="Informe seu Nome" id="inputNome">
+    </p>
+
+    <p>
+        Informe seu e-mail:
+        <input type="email" name="Informe seu e-mail" id="inputEmail">
+    </p>
+
+    <p>
+        Informe sua senha:
+        <input type="password" name="Informe sua senha" id="inputSenha">
+    </p>
+    <button id="botaoRegistrar">Registrar</button>
+
+    <table id="tabelaUsuarios">
+        <tr>
+            <th>Nome de Usuário</th>
+           <th>Email</th>
+           <th>Senha</th>
+        </tr>
+    </table>
 </body>
+
 </html>
