--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         <input type="password" name="Informe sua senha" id="inputSenha">
     </p>
     <button id="botaoRegistrar">Registrar</button>
+    <button id="botaoRemoverDados">REMOVER DADOS!!!</button>
 
     <table id="tabelaUsuarios">
         <tr>
             <th>Nome de Usuário</th>
+            <th>E-mail</th>
+            <th>Senha</th>
+
         </tr>
     </table>
 </body>
